feat: rework Dockerfile w/ S6 overlay
thx, @Griefed